[package]
name = "arctis"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
anyhow = "1.0.93"
config = "0.15.4"
flexi_logger = "0.29.6"
prettytable-rs = "0.10.0"

arctis-types = { path = "../arctis-types" }
sol-lib = { path = "../sol-lib" }
sol-db = { path = "../sol-db" }