[package]
name = "sol-db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
anyhow = "1.0.93"
duckdb = { version = "1.1.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "0.10.0"

arctis-types = { path = "../arctis-types" }