[package]
name = "sol-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { version="0.15.7" }
tokio = { version = "1", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.93"
chrono = "0.4.38"
futures = "0.3.31"
async-trait = "0.1.83"
reqwest = { version = "0.12.8", features = ["json"] }
regex = "1.11.1"
solana-client = "2.0.14"
solana-sdk = "2.0.14"
solana-transaction-status = "2.0.14"
solana-account-decoder = "2.1.0"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
mpl-token-metadata = "5.1.0"

anchor-lang = "0.24.2"
base64 = "0.22.1"
bincode = "1.3.3"

arctis-types = { path = "../arctis-types" }
carbon-raydium-amm-v4-decoder = {version = "0.4.0"}
carbon-jupiter-swap-decoder = "0.4.0"
carbon-core = "0.4.0"
